--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^5.9.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "session": "^0.1.0"
   }
 }
