--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^5.9.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "session": "^0.1.0"
