--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@aws-sdk/client-s3": "^3.484.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "mongodb": "^5.9.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
