--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
+    "aws-sdk": "^2.1582.0",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -21,6 +22,7 @@
     "mongodb": "^5.9.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "session": "^0.1.0"
